--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,9 @@
 spring.application.name=WikiSearch
+#sql
+spring.datasource.url=jdbc:mysql://localhost:3306/wiki_db
+spring.datasource.username=root
+spring.datasource.password=Skp@98dmj
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+
+file.path=sample_file.xml
